--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "formidable": "^3.5.4",
     "lucide-react": "^0.511.0",
     "next": "15.3.1",
+    "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "resend": "^4.5.1",
