--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+     "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@stripe/stripe-js": "^7.3.0",
@@ -14,6 +15,7 @@
     "formidable": "^3.5.4",
     "lucide-react": "^0.511.0",
     "next": "15.3.1",
+    "next-sitemap": "^4.2.3",
     "nodemailer": "^7.0.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
